feat: prisma utils, fix posts

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "build": "remix build",
     "start": "remix-serve ./build/index.js",
     "check": "pnpm /^check:.*/",
-    "check:env": "tsx scripts/check-env.ts",
+    "check:env": "tsx prisma/utils/check-env.ts",
     "check:tsc": "tsc --noEmit",
     "check:prettier": "prettier --cache --check '**/*.{js,mjs,cjs,ts,tsx,json,md,mdx}'",
     "check:eslint": "eslint --cache .",
     "check:stylelint": "stylelint --cache ./app/styles/*.css",
     "check:prisma": "prisma validate",
-    "check:data": "tsx scripts/check-data.ts",
+    "check:data": "tsx prisma/utils/check-data.ts",
     "fix": "pnpm /^fix:.*/",
     "fix:prettier": "prettier --cache --write '**/*.{js,mjs,cjs,ts,tsx,json,md,mdx}'",
     "fix:eslint": "eslint --cache --fix .",
