feat: post excerpt

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "db:debug": "prisma debug",
     "db:docs": "prisma-docs-generator serve",
     "prod:dev": "dotenv -e .env.production remix dev --manual",
-    "prod:check:env": "dotenv -e .env.production tsx scripts/check-env.ts",
-    "prod:check:data": "dotenv -e .env.production tsx scripts/check-data.ts",
+    "prod:check:env": "dotenv -e .env.production tsx prisma/utils/check-env.ts",
+    "prod:check:data": "dotenv -e .env.production tsx prisma/utils/check-data.ts",
     "prod:db:push": "dotenv -e .env.production prisma db push",
     "prod:db:reset": "dotenv -e .env.production prisma db push --force-reset",
     "prod:db:migrate": "dotenv -e .env.production prisma migrate dev",
