--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
+    "react-textarea-autosize": "8.5.3",
     "remix-auth": "^3.6.0",
     "remix-auth-form": "^1.4.0",
     "remix-auth-github": "^1.6.0",
