--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ GITHUB_CLIENT_SECRET="replace_this"
 GOOGLE_CLIENT_ID="replace_this"
 GOOGLE_CLIENT_SECRET="replace_this"
 
-# For services
+# For services (Optional)
 UPLOADCARE_KEY="replace_this"
 RESEND_KEY="replace_this"
 POSTHOG_KEY="replace_this"
