--- a/.commitlintrc
+++ b/.commitlintrc
@@ -13,42 +13,12 @@
         "docs",
         "feat",
         "fix",
+        "infra",
         "perf",
         "refactor",
         "revert",
         "style",
-        "test",
-        "infra"
-      ]
-    ],
-    "scope-enum": [
-      2,
-      "always",
-      [
-        "auth",
-        "blog",
-        "component",
-        "config",
-        "content",
-        "data",
-        "example",
-        "feature",
-        "graphql",
-        "home",
-        "hook",
-        "layout",
-        "lib",
-        "package",
-        "pricing",
-        "react",
-        "remix",
-        "route",
-        "search",
-        "style",
-        "subscribe",
-        "tailwind",
-        "type",
-        "util"
+        "test"
       ]
     ]
   }
