--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "html-react-parser": "^5.0.11",
     "isbot": "^4.1.0",
     "nanoid": "^5.0.4",
+    "next-themes": "0.2.1",
     "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
@@ -116,6 +117,7 @@
     "remix-auth-google": "^2.0.0",
     "remix-themes": "^1.2.2",
     "slugify": "^1.6.6",
+    "sonner": "1.2.4",
     "string-strip-html": "^13.4.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
