--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "embla-carousel-react": "8.0.0-rc17",
+    "flagpack-core": "2.0.0",
     "html-react-parser": "^5.0.11",
     "isbot": "^4.1.0",
     "nanoid": "^5.0.4",
