feat: uploader uploadcare lib component

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,8 @@ GOOGLE_CLIENT_ID="replace_this"
 GOOGLE_CLIENT_SECRET="replace_this"
 
 # For services (Optional)
-UPLOADCARE_KEY="replace_this"
+UPLOADCARE_PUBLIC_KEY="replace_this"
+UPLOADCARE_SECRET_KEY="replace_this_optional"
 RESEND_KEY="replace_this"
 POSTHOG_KEY="replace_this"
 
