--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,6 @@
     "**/*.cjs",
     "**/*.mjs"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "types": ["@uploadcare/blocks/types/jsx"]
 }
