--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@tiptap/starter-kit": "^2.1.13",
     "@types/pluralize": "^0.0.33",
     "@uploadcare/blocks": "0.30.5",
+    "@uploadcare/rest-client": "6.12.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.3.0",
     "class-variance-authority": "^0.7.0",
