--- a/package.json
+++ b/package.json
@@ -163,7 +163,8 @@
     "tailwindcss": "^3.4.0",
     "taze": "^0.13.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "5.0.10"
   },
   "engines": {
     "node": ">=18.0.0"
