--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
+    "module": "ESNext",
     "moduleResolution": "Bundler",
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
@@ -22,7 +23,7 @@
     "noEmit": true // Remix building everything in `remix build`
   },
   "include": [
-    "remix.env.d.ts",
+    "env.d.ts",
     ".eslintrc.cjs",
     "**/*.ts",
     "**/*.tsx",
