--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "prod:db:seed": "dotenv -e .env.production prisma db seed && pnpm prod:check:data",
     "prod:db:studio": "dotenv -e .env.production prisma studio --browser none",
     "clean": "rm -rf .cache build public/build",
-    "upgrade": "taze",
+    "upgrade": "taze -w && taze major -w",
     "knip": "knip",
     "analyze": "pnpm clean && dpdm **/*.*",
     "postinstall": "prisma generate"
@@ -96,7 +96,7 @@
     "bcryptjs": "^2.4.3",
     "chalk": "^5.3.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
@@ -139,7 +139,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.56.0",
-    "@types/node": "^20.10.5",
+    "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
@@ -149,7 +149,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.2",
-    "eslint-plugin-tailwindcss": "^3.13.0",
+    "eslint-plugin-tailwindcss": "^3.13.1",
     "knip": "3.3.0",
     "prettier": "^3.1.1",
     "prettier-plugin-organize-imports": "^3.2.4",
