--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "remix-auth-github": "^1.6.0",
     "remix-auth-google": "^2.0.0",
     "remix-themes": "^1.2.2",
+    "remix-utils": "7.5.0",
     "slugify": "^1.6.6",
     "sonner": "1.2.4",
     "string-strip-html": "^13.4.4",
