chore: upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -98,12 +98,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "date-fns": "3.0.6",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "embla-carousel-react": "8.0.0-rc17",
     "flagpack-core": "2.0.0",
     "html-react-parser": "^5.0.11",
-    "isbot": "^4.1.0",
+    "isbot": "^4.3.0",
     "nanoid": "^5.0.4",
     "next-themes": "0.2.1",
     "pluralize": "^8.0.0",
@@ -139,7 +140,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/bcryptjs": "^2.4.6",
-    "@types/eslint": "^8.56.0",
+    "@types/eslint": "^8.56.1",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
