--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "zodix": "^0.4.4"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@iconify/react": "^4.1.1",
     "@remix-run/dev": "^2.4.1",
     "@remix-run/eslint-config": "^2.4.1",
@@ -154,7 +155,6 @@
     "eslint-plugin-tailwindcss": "^3.13.1",
     "knip": "3.3.0",
     "prettier": "^3.1.1",
-    "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.10",
     "prisma": "^5.7.1",
     "prisma-docs-generator": "^0.8.0",
