--- a/.env.example
+++ b/.env.example
@@ -15,9 +15,10 @@ GOOGLE_CLIENT_SECRET="replace_this"
 
 # For services (Optional)
 UPLOADCARE_PUBLIC_KEY="replace_this"
-UPLOADCARE_SECRET_KEY="replace_this_optional"
+UPLOADCARE_SECRET_KEY="replace_this"
 RESEND_KEY="replace_this"
 POSTHOG_KEY="replace_this"
+SENTRY_DSN="replace_this"
 
 # For MySQL container with Docker Compose (Optional)
 MYSQL_ROOT_PASSWORD="replace_this"
