--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     "eslint-plugin-tailwindcss": "^3.13.1",
     "knip": "3.3.0",
     "prettier": "^3.1.1",
+    "prettier-plugin-packagejson": "2.4.9",
     "prettier-plugin-tailwindcss": "^0.5.10",
     "prisma": "^5.7.1",
     "prisma-docs-generator": "^0.8.0",
