feat: icon set component for faster load than iconify

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@fontsource-variable/anybody": "5.0.19",
     "@fontsource-variable/inter": "5.0.15",
     "@nasa-gcn/remix-seo": "^2.0.0",
+    "@phosphor-icons/react": "2.0.15",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -115,6 +116,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-flagpack": "1.2.0",
+    "react-icons": "4.12.0",
     "react-resizable-panels": "1.0.5",
     "react-textarea-autosize": "8.5.3",
     "remix-auth": "^3.6.0",
