fix: replace react-icons usage with simple-icons

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "remix dev --manual",
     "build": "remix build",
-    "build:sentry": "remix build --sourcemap && sentry-upload-sourcemaps --org allnimal --project dogokit-remix",
+    "build:sentry": "remix build --sourcemap && sentry-upload-sourcemaps --quiet --org allnimal --project dogokit-remix",
     "start": "remix-serve ./build/index.js",
     "check": "pnpm /^check:.*/",
     "check:env": "tsx prisma/utils/check-env.ts",
@@ -50,6 +50,7 @@
     "@epic-web/remember": "1.0.2",
     "@fontsource-variable/anybody": "5.0.19",
     "@fontsource-variable/inter": "5.0.15",
+    "@icons-pack/react-simple-icons": "9.2.0",
     "@nasa-gcn/remix-seo": "^2.0.0",
     "@phosphor-icons/react": "2.0.15",
     "@prisma/client": "^5.7.1",
@@ -116,7 +117,6 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-flagpack": "1.2.0",
-    "react-icons": "4.12.0",
     "react-resizable-panels": "1.0.5",
     "react-textarea-autosize": "8.5.3",
     "remix-auth": "^3.6.0",
