feat: use remixicon to replace simple-icons

--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@epic-web/remember": "1.0.2",
     "@fontsource-variable/anybody": "5.0.19",
     "@fontsource-variable/inter": "5.0.15",
-    "@icons-pack/react-simple-icons": "9.2.0",
     "@nasa-gcn/remix-seo": "^2.0.0",
     "@phosphor-icons/react": "2.0.15",
     "@prisma/client": "^5.7.1",
@@ -85,6 +84,7 @@
     "@remix-run/react": "^2.4.1",
     "@remix-run/serve": "^2.4.1",
     "@remix-run/server-runtime": "^2.4.1",
+    "@remixicon/react": "4.0.1",
     "@sentry/remix": "7.92.0",
     "@tanem/react-nprogress": "^5.0.51",
     "@tiptap/core": "^2.1.13",
@@ -142,6 +142,7 @@
     "@iconify/react": "^4.1.1",
     "@remix-run/dev": "^2.4.1",
     "@remix-run/eslint-config": "^2.4.1",
+    "@sentry/cli": "2.24.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/bcryptjs": "^2.4.6",
