feat: finalize admin page editor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,5 +34,6 @@
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#1e1b4b99",
     "titleBar.inactiveForeground": "#e7e7e799"
-  }
+  },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
