feat: combine iconify and icon-set into libs/icon

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,6 @@
+__*.md
 /build
+/coverage-ts
 /docs/SOCIAL.md
 /node_modules
 bun.lockb
@@ -6,4 +8,3 @@ package-lock.json
 pnpm-lock.yaml
 slides.md
 yarn.lock
-__*.md
