feat: migrate to postgresql on neon

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_URL="http://localhost:3000"
 SESSION_SECRET="replace_this"
 
 # For database
-DATABASE_URL="mysql://user:password@localhost:3306/dogokit-remix"
+DATABASE_URL="postgresql://user:password@localhost:5432/dogokit-remix"
 DATABASE_BRANCH="local"
 
 # For OAuth
@@ -20,6 +20,13 @@ RESEND_KEY="replace_this"
 POSTHOG_KEY="replace_this"
 SENTRY_DSN="replace_this"
 
+# For PostgreSQL container with Docker Compose (Optional)
+POSTGRES_USER="user"
+POSTGRES_PASSWORD="password"
+POSTGRES_DATABASE="dogokit-remix"
+POSTGRES_HOST_PORT="5432"
+POSTGRES_CONTAINER_PORT="5432"
+
 # For MySQL container with Docker Compose (Optional)
 MYSQL_ROOT_PASSWORD="replace_this"
 MYSQL_USER="user"
@@ -27,10 +34,3 @@ MYSQL_PASSWORD="password"
 MYSQL_DATABASE="dogokit-remix"
 MYSQL_HOST_PORT="3306"
 MYSQL_CONTAINER_PORT="3306"
-
-# For PostgreSQL container with Docker Compose (Optional)
-POSTGRES_USER="user"
-POSTGRES_PASSWORD="password"
-POSTGRES_DATABASE="dogokit-remix"
-POSTGRES_HOST_PORT="5432"
-POSTGRES_CONTAINER_PORT="5432"
