--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,29 +2,29 @@
 version: "3.9"
 
 services:
-  mysql:
-    image: mysql:8
-    container_name: dogokit-mysql
+  postgres:
+    image: postgres:alpine
+    container_name: dogokit-postgres
     hostname: database
     restart: no
     volumes:
-      - mysql_data:/var/lib/mysql
+      - postgres_data:/var/lib/postgres
     ports:
-      - ${MYSQL_HOST_PORT}:${MYSQL_CONTAINER_PORT}
+      - ${POSTGRES_HOST_PORT}:${POSTGRES_CONTAINER_PORT}
     env_file:
       - .env
-  # postgres:
-  #   image: postgres:alpine
-  #   container_name: dogokit-postgres
+  # mysql:
+  #   image: mysql:8
+  #   container_name: dogokit-mysql
   #   hostname: database
   #   restart: no
   #   volumes:
-  #     - postgres_data:/var/lib/postgres
+  #     - mysql_data:/var/lib/mysql
   #   ports:
-  #     - ${POSTGRES_HOST_PORT}:${POSTGRES_CONTAINER_PORT}
+  #     - ${MYSQL_HOST_PORT}:${MYSQL_CONTAINER_PORT}
   #   env_file:
   #     - .env
 
 volumes:
-  mysql_data:
-  # postgres_data:
+  postgres_data:
+  # mysql_data:
