docs: rename to Dogokit Beagle

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_URL="http://localhost:3000"
 SESSION_SECRET="replace_this"
 
 # For database
-DATABASE_URL="postgresql://user:password@localhost:5432/dogokit-remix"
+DATABASE_URL="postgresql://user:password@localhost:5432/dogokit-beagle"
 DATABASE_BRANCH="local"
 
 # For OAuth
@@ -23,7 +23,7 @@ SENTRY_DSN="replace_this"
 # For PostgreSQL container with Docker Compose (Optional)
 POSTGRES_USER="user"
 POSTGRES_PASSWORD="password"
-POSTGRES_DATABASE="dogokit-remix"
+POSTGRES_DATABASE="dogokit-beagle"
 POSTGRES_HOST_PORT="5432"
 POSTGRES_CONTAINER_PORT="5432"
 
@@ -31,6 +31,6 @@ POSTGRES_CONTAINER_PORT="5432"
 MYSQL_ROOT_PASSWORD="replace_this"
 MYSQL_USER="user"
 MYSQL_PASSWORD="password"
-MYSQL_DATABASE="dogokit-remix"
+MYSQL_DATABASE="dogokit-beagle"
 MYSQL_HOST_PORT="3306"
 MYSQL_CONTAINER_PORT="3306"
